GENERATOR_OUTPUT/src/kubeflow-apps/katib/patches/patch-katib-db-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db-manager
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: katib-db-manager
