GENERATOR_OUTPUT/src/kubeflow-apps/katib/patches/patch-katib-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-istio-gateway/kubeflow-gateway
